[package]
name = "c_013_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "c_013_actix"

[dependencies]
actix-web = "4.0.1"
reqwest = "0.11.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
